--- a/src/app/matheus-component/matheus-component.component.html
+++ b/src/app/matheus-component/matheus-component.component.html
@@ -1,1 +1,5 @@
-<p>matheus-component works</p>
+<h3>Matheus Valencio Fonseca</h3>
+<p>RA: 0050832011026</p>
+<p>
+  GitHub: <a href="https://github.com/matheus-valencio">Matheus Valencio</a>
+</p>
