--- a/src/app/matheus-lista-component/matheus-lista-component.component.html
+++ b/src/app/matheus-lista-component/matheus-lista-component.component.html
@@ -37,7 +37,7 @@
     <th>Horário</th>
   </tr>
   <tr *ngFor="let materia of disciplinas.getLista(); index as i">
-    <td>{{ materia.codigo }}</td>
+    <a [routerLink]="['/lista', i]">{{ materia.codigo }}</a>
     <td>{{ materia.materia }}</td>
     <td>{{ materia.dia }}</td>
     <td>{{ materia.horario }}</td>
