--- a/src/app/matheus-detalhes-component/matheus-detalhes-component.component.html
+++ b/src/app/matheus-detalhes-component/matheus-detalhes-component.component.html
@@ -1,1 +1,14 @@
-<p>matheus-detalhes-component works</p>
+<br /><br />
+<button type="button" [routerLink]="['/lista']">VOLTAR</button>
+<br /><br />
+<h2>[{{ item.codigo }}] - {{ item.materia }}</h2>
+<p>
+  <strong>Dia:</strong> {{ item.dia }} - <strong>Horário:</strong>
+  {{ item.horario }}
+</p>
+<br />
+<h3>Ementa</h3>
+<div>{{ item.ementa }}</div>
+<br /><br />
+<h3>Objetivos</h3>
+<div>{{ item.objetivos }}</div>
